RESOLVED FIXED26787
REGRESSION (r45064): Drop caret remains in text control after the mouse exits
https://bugs.webkit.org/show_bug.cgi?id=26787
Summary REGRESSION (r45064): Drop caret remains in text control after the mouse exits
mitz
Reported 2009-06-28 19:22:49 PDT
Steps to reproduce: 1) Go to the URL 2) Drag a file to the file upload control, passing over the Description text field on the way over Results: A drag caret appears in the text field when the mouse passes over it, but does not disappear when the mouse exits the field, nor when the file is dropped on the control. The caret should disappear as soon as the mouse exits the field.
Attachments
An update for smfr (4.22 KB, patch)
2009-08-03 15:33 PDT, Eric Seidel (no email)
no flags
mitz
Comment 1 2009-06-28 20:00:36 PDT
This was most likely caused by <http://trac.webkit.org/changeset/45064>.
mitz
Comment 2 2009-06-28 20:00:57 PDT
mitz
Comment 3 2009-06-28 20:06:18 PDT
Confirmed that reverting r45064 and r45065 fixes the bug.
Eric Seidel (no email)
Comment 4 2009-07-02 12:25:58 PDT
I found bug 24731 which is unlikely to be related, but reminded me of this bug.
Eric Seidel (no email)
Comment 5 2009-07-02 12:28:18 PDT
Hum. I'm not sure how the caret is supposed to be set back when the mouse exits. Maybe before the dragging over other random parts of the page always returned "None" I'll have to try this in the debugger.
Eric Seidel (no email)
Comment 6 2009-07-08 10:10:01 PDT
I owe you a fix for this. I'll look today.
Simon Fraser (smfr)
Comment 7 2009-08-03 14:10:00 PDT
Eric: any update?
Eric Seidel (no email)
Comment 8 2009-08-03 15:33:23 PDT
Created attachment 34010 [details] An update for smfr --- 6 files changed, 33 insertions(+), 7 deletions(-)
Eric Seidel (no email)
Comment 9 2009-08-04 21:22:32 PDT
Oh, did this never land?
Eric Seidel (no email)
Comment 10 2009-08-04 21:23:17 PDT
I think this was the patch I was trying to land when run-webkit-tests started failing with the zsh error for me. Will land now.
Eric Seidel (no email)
Comment 11 2009-08-04 21:36:12 PDT
Comment on attachment 34010 [details] An update for smfr Clearing review flag on attachment: 34010 Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/fast/forms/drag-into-textarea.html M LayoutTests/fast/forms/drag-out-of-textarea.html M WebCore/ChangeLog A WebCore/manual-tests/drag-caret.html M WebCore/page/DragController.cpp Committed r46792 M WebCore/ChangeLog M WebCore/page/DragController.cpp A WebCore/manual-tests/drag-caret.html M LayoutTests/ChangeLog M LayoutTests/fast/forms/drag-out-of-textarea.html M LayoutTests/fast/forms/drag-into-textarea.html r46792 = 9d9d45a380de61fd378173cac93fd81b2b9c865f (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46792
Eric Seidel (no email)
Comment 12 2009-08-04 21:36:15 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 13 2009-12-22 10:09:43 PST
This was also causing random crashes at page teardown time (usually in Node::isDescendantOf()).
Eric Seidel (no email)
Comment 14 2009-12-22 11:09:20 PST
I'm confused by ap's comment. This was successfully fixed, yes? You were just noting this had other symptoms, no?
Alexey Proskuryakov
Comment 15 2009-12-22 11:30:03 PST
Yes.
Note You need to log in before you can comment on or make changes to this bug.