2009-08-04  Eric Seidel  <eric@webkit.org>

Reviewed by Simon Fraser.

        REGRESSION (r45064): Drop caret remains in text control after the mouse exits
        https://bugs.webkit.org/show_bug.cgi?id=26787

        Fix some bogus comments noticed during testing.

        * fast/forms/drag-into-textarea.html:
        * fast/forms/drag-out-of-textarea.html:

2009-08-04  Eric Seidel  <eric@webkit.org>

        Reviewed by Simon Fraser.

        REGRESSION (r45064): Drop caret remains in text control after the mouse exits
        https://bugs.webkit.org/show_bug.cgi?id=26787

        Add back missing dragController()->clear() call.

        * manual-tests/drag-caret.html: Added.
        * page/DragController.cpp:
        (WebCore::DragController::tryDocumentDrag):

Canonical link: https://commits.webkit.org/38398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46792 268f45cc-cd09-0410-ab3c-d52691b4dbfc