WebCore/page/DragController.cpp
@@ -281,9 +281,7 @@ bool DragController::tryDocumentDrag(DragData* dragData, DragDestinationAction a
     if (m_isHandlingDrag) {
         m_page->dragCaretController()->clear();
         return true;
-    }
-
-    if ((actionMask & DragDestinationActionEdit) && !m_isHandlingDrag && canProcessDrag(dragData)) {
+    } else if ((actionMask & DragDestinationActionEdit) && canProcessDrag(dragData)) {
         if (dragData->containsColor()) {
             operation = DragOperationGeneric;
             return true;
@@ -302,6 +300,8 @@ bool DragController::tryDocumentDrag(DragData* dragData, DragDestinationAction a
         operation = dragIsMove(innerFrame->selection()) ? DragOperationMove : DragOperationCopy;
         return true;
     }
+    // If we're not over an editable region, make sure we're clearing any prior drag cursor.
+    m_page->dragCaretController()->clear();
     return false;
 }
 
